# ucb-tool

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: schema_authoring.md  user_guide.md
packaging/: build_appimage.sh  ucbtool.spec
packaging/appimage/: AppRun  ucbtool-gui.desktop
packaging/nsis/: LICENSE.txt  installer.nsi
src/ucb_tool/: __init__.py
src/ucb_tool/cli/: __main__.py  commands.py
src/ucb_tool/core/: chip_profile.py  errors.py  field_codec.py  hex_io.py  schema_loader.py  ucb_bundle.py  validator.py  xlsx_io.py
src/ucb_tool/gui/: __main__.py  main_window.py
src/ucb_tool/gui/dialogs/: chip_picker.py  danger_confirm.py
src/ucb_tool/gui/views/: field_form.py
src/ucb_tool/gui/widgets/: editors.py  hex_dump_view.py
src/ucb_tool/templates/: tc48x.hex  tc4dx.hex  tc4zx.hex
tests/: conftest.py
tests/fixtures/: README.md  tc4d9_sample.hex
tests/test_cli/: test_apply_xlsx.py  test_cli_extra.py  test_diff.py  test_e2e.py  test_show.py
tests/test_core/: test_chip_profile.py  test_errors.py  test_field_codec.py  test_hex_io.py  test_sample_schemas.py  test_schema_loader.py  test_schemas_lint.py  test_ucb_bundle.py  test_validator.py  test_validator_extra.py  test_xlsx_apply.py  test_xlsx_io.py
tests/test_e2e/: test_roundtrip.py
tests/test_gui/: conftest.py  test_apply_xlsx_menu.py  test_danger_dialog.py  test_editors.py  test_field_form.py  test_hex_dump.py  test_main_window.py  test_main_window_extra.py
tools/: gen_ucb_schemas.py  sanitize_fixture.py
(+240 files in other folders)
